--- a/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
@@ -19,7 +19,7 @@
 
         <label class="texto_labels" style="margin: 1rem 1rem; ">Lista de tipo de entidades</label>
         
-        <select size="3" class="select_td_te" ng-disabled="vm.editando" ng-options="tipo as tipo.nombre for tipo in vm.tiposEntidad" ng-model="vm.tipoEntSeleccionada"></select>
+        <select size="3" class="select_td_te" ng-disabled="vm.editando" ng-options="tipo as tipo.nombre for tipo in vm.tiposEntidad | orderBy: 'nombre'" ng-model="vm.tipoEntSeleccionada"></select>
         
         <button class="a_boton btn_tipo_doc1" ng-disabled="vm.editando" type="button" ng-click="vm.remover()">
             Remover
