--- a/WebLegemClient/src/css/pagina_principal.css
+++ b/WebLegemClient/src/css/pagina_principal.css
@@ -35,15 +35,18 @@ body {
 
 .btn_nav{
     cursor:pointer;
-    margin:0 10px  0 0;
-    padding:5px 15px;
+    margin:0 10px  0 10px;
+    padding:5px 5px 5px 30px;
     line-height:5px;
     height:9px;
+    text-decoration:none;
 
     font-family:'Century Gothic';
     font-size:0.9em;
     font-weight:bold;
     border-radius:2px;
+    color:#fff;
+    position:relative;
 
     background: rgb(165,204,61); /* Old browsers */
     background: -moz-linear-gradient(top, rgba(126,179,0,1) 48%, rgb(100, 137, 0) 100%);
@@ -51,20 +54,55 @@ body {
     background: linear-gradient(to bottom, rgba(126,179,0,1) 48%,rgba(100, 137,0,1) 100%);
     background: linear-gradient(top, rgba(126,179,0,1) 48%, rgba(100, 137,0,1) 100%);
 
-    -webkit-box-shadow: 0.05em 0.05em 0.4em 0 rgba(0, 0, 0, 0.73);
-    -moz-box-shadow: 0.05em 0.05em 0.4em 0 rgba(0, 0, 0, 0.73);
-    box-shadow: 0.05em 0.05em 0.4em 0 rgba(0, 0, 0, 0.73);
+    -webkit-box-shadow: 0.05em 0.05em 0.4em 0 rgba(38, 38, 38, 0.66);
+    -moz-box-shadow: 0.05em 0.05em 0.4em 0 rgba(38, 38, 38, 0.66);
+    box-shadow: 0.05em 0.05em 0.4em 0 rgba(38, 38, 38, 0.66);
 }
 
-.btn_nav:focus{
-    cursor:pointer;
-    margin:0 10px  0 0;
-    padding:5px 15px;
-    line-height:5px;
-    height:9px;
+.btn_nav:before{
+    content:"";
+    position:absolute;   
+    width:0;
+    height:4px;
+    background:#F39C22;
+    bottom:0;
+    left:0;
 
-    background:red;
+    -moz-transition: all .5s;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
 }
+
+.btn_nav:focus:before  {
+    content:"";
+    position:absolute;   
+    width:100%;
+    height:4px;
+    background:#F39C22;
+    bottom:0;
+    right:0;
+}
+
+#acc3{
+    position:absolute;
+    left:0;
+    bottom:2px;
+}
+
+#acc2{
+    position:absolute;
+    left:2px;
+    bottom:2px;
+}
+
+#acc1{
+    position:absolute;
+    left:5px;
+    bottom:5px;
+}
+
+
 
 
 .nombre_pagina {
@@ -74,7 +112,7 @@ body {
     padding:0 0 0 30px ;
     text-shadow: #fff 0 0 1px, #000 2px -2px 3px ;
     font-size: 6.5em;
-    font-family:'Times New Roman', Times, serif;
+    font-family:'Times New Roman';
     font-weight: bold;
     color: white;   
 
@@ -122,8 +160,10 @@ body {
     position:absolute;
     left:50%;
     bottom:0;
-    -moz-animation: all .5s;
-    transition: all .4s;
+    -moz-transition: all .5s;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
 }
 
 .bar_nav > li:hover:before{
@@ -159,9 +199,6 @@ body {
     z-index:3;
 }
 
-.bar_nav > li > ul > li{
-}
-
 .bar_nav > li > ul > li:hover a{
     color:#F39C22;
 }
@@ -173,6 +210,7 @@ body {
     color: white;
     padding:0.5em 0;
     height:43px;
+    border-bottom:1px groove #fff;
 }
 
 .boton_final {
