--- a/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
@@ -1,31 +1,33 @@
 ﻿<form>
 
-    <div style="display:inline-block; width:40%;">
-        <label class="texto_labels" for="tipo-documento">Tipo de Documento</label>
-        <select id="tipo-documento" ng-options="tipo as tipo.nombre for tipo in vm.tiposDocumento | orderBy: 'nombre'" ng-model="vm.tipoDocSeleccionado">
-            <option ng-repeat="tipo in vm.tiposDocumento">{{ tipo.nombre }}</option>
-        </select>
-    </div>    
-    
-
-    <div style="display:inline-block; width:40%;">
-        <label class="texto_labels" for="entidad" ng-model="vm.documento.entidad">Entidad</label>
-        <select id="entidad" ng-options="entidad as entidad.nombre for entidad in vm.entidades | orderBy: 'nombre'" ng-model="vm.entidadSeleccionada" >
-            <option ng-repeat="entidad in vm.entidades">{{ entidad.nombre }}</option>
-        </select>
-    </div>    
-
-    <div style="display:inline-block; width:40%;">
-        <label class="texto_labels" for="numero">Numero</label>
-        <input class="a_input" type="text" id="numero" ng-model="vm.documento.docId.numero" />
-    </div>
-
-    <div style="display:inline-block; width:40%;">
-        <label class="texto_labels" for="año">Año</label>
-        <input class="a_input" id="año" type="date" ng-model="vm.documeno.fechaPublicacion"/>
-    </div>
+    <fieldset style="padding:1em; margin-bottom:1em;">
+        <div style="display:inline-block; width:40%;">
+            <label class="texto_labels" for="tipo-documento">Tipo de Documento</label>
+            <select id="tipo-documento" ng-options="tipo as tipo.nombre for tipo in vm.tiposDocumento | orderBy: 'nombre'" ng-model="vm.tipoDocSeleccionado">
+                <option ng-repeat="tipo in vm.tiposDocumento">{{ tipo.nombre }}</option>
+            </select>
+        </div>
 
 
-    <button class="a_boton a_block" type="button" ui-sref="gestion-documental.crear-documento.asunto">Siguiente</button>
+        <div style="display:inline-block; width:40%; margin-bottom:1em;">
+            <label class="texto_labels" for="entidad" ng-model="vm.documento.entidad">Entidad</label>
+            <select id="entidad" ng-options="entidad as entidad.nombre for entidad in vm.entidades | orderBy: 'nombre'" ng-model="vm.entidadSeleccionada">
+                <option ng-repeat="entidad in vm.entidades">{{ entidad.nombre }}</option>
+            </select>
+        </div>
+
+        <div style="display:inline-block; width:40%;margin-bottom:1em;">
+            <label class="texto_labels" for="numero">Numero</label>
+            <input class="a_input " type="text" id="numero" ng-model="vm.documento.docId.numero" />
+        </div>
+
+        <div style="display:inline-block; width:40%;margin-bottom:1em;">
+            <label class="texto_labels" for="año">Año</label>
+            <input class="a_input" id="año" type="date" ng-model="vm.documeno.fechaPublicacion" />
+        </div>
+
+    </fieldset>
+
+    <button class="a_boton a_block" type="button" ui-sref="gestion-documental.crear-documento.resultado-ocr">Siguiente  ></button>
 
 </form>
