--- a/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
@@ -49,6 +49,6 @@ color:darkslategray;">
     </fieldset>
 
     <div>
-        <button class="a_boton" ui-sref="gestion-documental.crear-documento.informacion-documento">Siguiente   ></button>
+        <button class="a_boton" ng-click="vm.avanzar(1)">Siguiente   ></button>
     </div>
 </div>
