--- a/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
@@ -28,6 +28,6 @@
 
     </fieldset>
 
-    <button class="a_boton a_block" type="button" ui-sref="gestion-documental.crear-documento.resultado-ocr">Siguiente  ></button>
+    <button class="a_boton a_block" type="button" ng-click="vm.avanzar(2)">Siguiente  ></button>
 
 </form>
