tipo-documento form con problemas

--- a/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
@@ -16,7 +16,7 @@
 
         <div class="hijo_right">
             <div class="control_administracion">
-                <button class="btn_con_ico" type="button" ng-show="!vm.editando" ng-click="vm.nuevo()">
+                <button class="btn_con_ico" type="button" ng-click="vm.nuevo();">
                     <span class="ico-plus tamano_botones_1"></span>Nuevo
                 </button>
                 <button id="editar_td" class="btn_con_ico" ng-show="!vm.editando" type="button" ng-click="vm.editar()">
