forumulario tipo-entidad arreglado

--- a/WebLegemClient/src/css/animacion_carga.css
+++ b/WebLegemClient/src/css/animacion_carga.css
@@ -25,7 +25,7 @@
   content: '';
 }
 .loader:after {
-  background: #0f7574;
+  background: #ffffff;
   width: 75%;
   height: 75%;
   border-radius: 50%;
