--- a/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
@@ -18,10 +18,10 @@
                 <button class="btn_con_ico" ng-if="!vm.editando" ng-click="vm.nuevoFuncion()">
                     <span class="ico-plus tamano_botones_1"></span>Nuevo
                 </button>
-                <button id="editar_te" class="btn_con_ico" type="button" ng-if="!vm.editando" ng-click="vm.editando = true;">
+                <button id="editar_te" class="btn_con_ico" type="button" ng-show="!vm.editando && vm.tipoEntSeleccionada.nombre" ng-click="vm.editando = true;">
                     <span class="ico-pencil tamano_botones_1"></span>Editar
                 </button>
-                <button id="remover_te" class="btn_con_ico" ng-if="!vm.editando" type="button" ng-click="vm.remover()">
+                <button id="remover_te" class="btn_con_ico" ng-show="!vm.editando && vm.tipoEntSeleccionada.nombre" type="button" ng-click="vm.remover()">
                     <span class="ico-trash tamano_botones_1"></span>Remover
                 </button>
             </div>
