--- a/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="panel_control">
                     <ul class="a_bloques" ng-repeat="tipoDoc in vm.tiposDocumento | orderBy: 'nombre'">
-                        <li id="te_li_lista">
+                        <li class="te_li_lista">
                             <input ng-disabled="!vm.editando" type="checkbox" name="check_name" ng-model="vm.tiposSoportados[$index]" id="chk-td-{{tipoDoc.id}}">
                             <label class="styled1 note rounded" for="chk-td-{{tipoDoc.id}}">
                                 <span class="escudo-udenar" style="font-size:60px;"> </span><!--Controlar tamaño con media query-->
